# ml-con-xeito-showcase

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yml  example.env
app/: Dockerfile  pyproject.toml
app/src/: app.py
app/src/adapters/: data.py  ml.py
db/: init_dbs.sh
elt/: prefect.yaml  pyproject.toml
elt/.dlt/: config.toml
elt/src/: air_quality_pipeline.py
minio/: elt_readwrite_policy.json  ml_readwrite_policy.json
ml/: prefect.yaml  pyproject.toml
ml/conf/: config.yml
ml/src/: config.py  data.py  data_collection.py  data_repository.py  preprocessing.py  serving.py  training.py
mlflow/: Dockerfile
monitoring/: Dockerfile  prefect.yaml  pyproject.toml
monitoring/src/: api.py  data.py  observability.py
notebooks/: exploration.ipynb  pyproject.toml
notebooks/data/: features.csv
