[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.35.60",
    "mlflow>=2.17.2",
    "omegaconf>=2.3.0",
    "prefect>=3.1.2",
    "scikit-learn>=1.5.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
