[project]
name = "monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.63",
    "evidently>=0.4.39",
    "fastapi>=0.115.5",
    "mlflow>=2.17.2",
    "pandas>=2.2.3",
    "prefect>=3.1.2",
    "pydantic>=2.9.2",
    "s3fs>=0.4.2",
    "uvicorn>=0.32.0",
]
