[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.62",
    "jupyterlab>=4.3.0",
    "mlflow>=2.17.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly-express>=0.4.1",
    "scikit-learn>=1.5.2",
]
